Fixes: NB#248449 - mprogressindicatorstyle has wrong height.

--- a/base/meegotouch/libmeegotouchviews/style/mprogressindicatorstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mprogressindicatorstyle.css
@@ -6,9 +6,9 @@ MProgressIndicatorStyle {
 
     speed: 40;
 
-    minimum-size: $SIZE_BUTTON 8px;
-    preferred-size: -1 8px;
-    maximum-size: 100% 8px;
+    minimum-size: $SIZE_BUTTON 10px;
+    preferred-size: -1 10px;
+    maximum-size: 100% 10px;
 }
 
 MProgressIndicatorStyle[bar] {
@@ -21,7 +21,7 @@ MProgressIndicatorStyle[bar] {
 
     known-bar-texture: "meegotouch-progressindicator-bar-known-texture";
     known-bar-texture-tiled: true;
-    element-size: $SIZE_ONE;
+    element-size: 10px;
 
     refresh-rate: 20;
 }
